# editor_bezier

./: README.md  pyproject.toml
editor_bezier/: curve_editor.py  events.py  interface.py  main.py
