[tool.poetry]
name = "editor-bezier"
version = "0.1.0"
description = "Projeto desenvolvido como trabalho final da disciplina de Introdução à Computação Gráfica semestre 2024/2 do curso de Ciência da Computação da Universidade Federal do Amazonas"
authors = ["Juíle Hanada <juile.hanada@icomp.ufam.edu.br>", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
